# movielens-recommender

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: config.yaml
notebooks/: 1.-processing.ipynb  1.-processing.py  2.-analysis.ipynb  2.-analysis.py  3.-collaborative_filtering.ipynb  3.-collaborative_filtering.py
src/: dataset.py  encoding.py  model.py  train.py
tests/: test_encoding.py
