[tool.poetry]
name = "imdb_recommender"
version = "0.1.0"
description = ""
authors = ["xbelda <xaviblx@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"
jupyterlab = "^3.2.3"
scikit-learn = "^1.0.1"
seaborn = "^0.11.2"
torch = "^1.10.0"
pytorch-lightning = "^1.5.1"
jupytext = "^1.13.1"
pyarrow = "^6.0.0"
torchtext = "^0.11.0"
optuna = "^2.10.0"
mlflow = "^1.21.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
